Do not change RequestedPresence when disabling the account

We can keep RequestedPresence to online, in which case the account
will go back online when account gets enabled.

https://bugs.freedesktop.org/show_bug.cgi?id=52259